# slackmojify

./: .gitignore  README.md  get_emojis.sh
images/: slackmojify-thumb.psd
moji/: Cargo.toml  sample.txt  test.txt
moji/src/: main.rs
