[package]
name = "moji"
version = "0.1.0"
authors = ["Michael DeMarco <michaelfromyeg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
reqwest={ version = "0.11.3", features = ["json"] }
# futures = "0.3"
anyhow = "1.0"
indicatif = "0.16.0"
log = "0.4.0"
env_logger = "0.8.3"
clap-verbosity-flag = "0.3.1"
tensorflow = "0.12.0"
image = "0.23.14"
imageproc = "0.22.0"
tokio = { version = "1.0.2", features = ["full"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"